--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,33 +5,33 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      # 1) Checkout code
-      - uses: actions/checkout@v4
+    # 1 — checkout sources
+    - uses: actions/checkout@v4
 
-      # 2) Install the desired Python version
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
+    # 2 — Python + Poetry cache
+    - uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
+        cache: "poetry"          # speeds up subsequent runs
 
-      # 3) Install Poetry
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-in-project: true  # puts venv in repo root
-          installer-parallel: true
+    # 3 — install Poetry
+    - uses: snok/install-poetry@v1
+      with:
+        virtualenvs-in-project: true
+        installer-parallel: true
 
-      # 4) Install third-party deps
-      - name: Install dependencies
-        run: |
-          poetry install --no-interaction --no-ansi --no-root
+    # 4 — install dependencies (deps first, then your package)
+    - name: Install dependencies
+      run: |
+        poetry install --no-interaction --no-ansi --no-root
+        poetry install --no-interaction --no-ansi
 
-      # 5) Lint with Ruff
-      - name: Lint with Ruff
-        run: |
-          poetry run ruff rlmathtoolkit tests
+    # 5 — lint
+    - name: Lint with Ruff
+      run: poetry run ruff check rlmathtoolkit tests
 
-      # 6) Run unit tests
-      - name: Run unit tests
-        run: |
-          poetry run pytest --tb=short --strict-markers
+    # 6 — tests + coverage
+    - name: Run unit tests
+      run: poetry run pytest -q --cov=rlmathtoolkit --cov-report=term-missing
